RMixtComp 0.4 2018-10-18
- Use MixtComp v4 