@@ -39,16 +39,20 @@ import(scales)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,position_dodge)
+importFrom(ggplot2,scale_color_discrete)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme)
